# tutorial__zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.txt  configuration.yml  dict.dic  justfile  rustfmt.toml  spec.yml
.github/workflows/: general.yml
configuration/: base.yml  production.yml
migrations/: 20210717100504_make_status_not_null_in_subscriptions.sql  20220420200924_make_status_not_null_in_subscriptions.sql  20220423065557_create_users_table.sql  20220423082453_add_salt_to_users.sql  20220428082239_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
