[package]
name = "zero2prod"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3.0.1"
unicode-segmentation = "1.9.0"
validator = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }



[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
claim = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
